tests/ui/errors/snapshots/infer_array_to_slice_type_mismatch_hint.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:6:11]
 5 │   let items: Array<int, 3> = [1, 2, 3]
 6 │   consume(items)
   ·           ──┬──
   ·             ╰── expected `Slice<int>`, found `Array<int, 3>`
 7 │ }
   ╰────
  help: Call `.to_slice()` to copy the elements into a new slice, or change the receiving type to `Array<int, 3>` · code: [infer.type_mismatch]
