tests/ui/errors/snapshots/infer_as_binding_in_let.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid `as` binding
   ╭─[test.lis:5:7]
 4 │ fn test(p: Point) -> int {
 5 │   let Point { x, .. } as q = p;
   ·       ──────────┬─────────
   ·                 ╰── `as` is disallowed here
 6 │   q.x
   ╰────
  help: Use `as` only in `match`, `if let`, `while let`, or `Some(value as name)` in `select` · code: [infer.as_binding_in_irrefutable_context]
