tests/ui/errors/snapshots/infer_as_binding_in_param.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid `as` binding
   ╭─[test.lis:4:9]
 3 │ 
 4 │ fn test(Point { x, .. } as p: Point) -> int { x }
   ·         ──────────┬─────────
   ·                   ╰── `as` is disallowed here
   ╰────
  help: Use `as` only in `match`, `if let`, `while let`, or `Some(value as name)` in `select` · code: [infer.as_binding_in_irrefutable_context]
